# sdl2-platformer-engine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.cmake  install.sh
cmake/: compiler-options.cmake  cpp-standard.cmake  dependencies.cmake  dev-dependencies.cmake  utilities.cmake
cmake/dependencies/: sdl2-ttf.cmake
dependencies/: sdl2-image.cmake  sdl2.cmake  tinyXML2.cmake
include/Animations/: Animation.h  Sequence.h  SequenceAnimation.h  SpriteAnimation.h
include/Cameras/: Camera.h
include/Characters/: Character.h  Stalker.h  Warrior.h
include/Collisions/: CollisionHandler.h
include/Core/: Engine.h
include/Events/: EventHandler.h
include/Graphics/: TextureManager.h  TextureRenderProperties.h
include/Inputs/: InputHandler.h
include/Maps/: GameMap.h  Layer.h  Parser.h  TileLayer.h  Tileset.h  TitleLayer.h
include/Objects/: GameObject.h  ObjectInterface.h  ObjectsFactory.h  Properties.h  Registrar.h
include/Physics/: Collider.h  Point.h  RigidBody.h  Transform.h  Vector2D.h
include/States/: GameState.h
include/Timers/: Timer.h
resources/: README.md  textures.xml
resources/maps/: demo_map.tmx
src/: main.cpp
src/Animations/: Animation.cpp  SequenceAnimation.cpp  SpriteAnimation.cpp
src/Cameras/: Camera.cpp
src/Characters/: Character.cpp  Stalker.cpp  Warrior.cpp
src/Collisions/: CollisionHandler.cpp
src/Core/: Engine.cpp
src/Events/: EventHandler.cpp
src/Graphics/: TextureManager.cpp  TextureRenderProperties.cpp
src/Inputs/: InputHandler.cpp
src/Maps/: GameMap.cpp  Layer.cpp  Parser.cpp  TileLayer.cpp  Tileset.cpp  TitleLayer.cpp
src/Objects/: GameObject.cpp  ObjectsFactory.cpp  Properties.cpp  Registrar.cpp
src/Physics/: Collider.cpp  Point.cpp  RigidBody.cpp  Transform.cpp  Vector2D.cpp
src/States/: GameState.cpp
src/Timers/: Timer.cpp
